# pyproject.toml
[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "jcchelpers"
authors = [
    {name = "Andi Vajda", email = "vajda@apache.org"},
    {name = "Clément Jonglez", email = "clement@jonglez.space"}
]
description = "Helpers for jcc"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: C++',
    'Programming Language :: Java',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Libraries :: Java Libraries'
]
version = "0.1.0"
dependencies = [
    "jdk4py @ git+https://github.com/GorgiAstro/jdk4py/@test-pack-java-runtime",
]

[tool.setuptools]